@@ -53,7 +53,7 @@ namespace scheme {
 #define VM_LOG1(fmt, a)    theVM->getErrorPort().format(UC(fmt), L1(a))
 #define VM_LOG2(fmt, a, b)    theVM->getErrorPort().format(UC(fmt), L2(a, b))
 
-#if 0
+#ifdef TRACE_INSN
 #define TRACE_INSN0(name) errorPort_.format(UC("=========================\n~a\n"), L1(name))
 #define TRACE_INSN1(name, fmt, a) TRACE_INSN0(name),errorPort_.format(UC(fmt), L1(a))
 #define TRACE_INSN2(name, fmt, a, b) TRACE_INSN0(name),errorPort_.format(UC(fmt), L2(a, b))
